feat(api): unify DCA calculation response format Replace the dual response pattern (DcaResponse vs DcaDetailedResponse) with a single DcaCalculationResult DTO returned as an array. - OpenAPI spec: change from oneOf to array schema - Service: consolidate calculate() and calculateDetailed() into   calculateDca() returning List<DcaCalculationResult> - detailed param controls list length (1 for summary, N for detailed) - All 36 tests updated and passing BREAKING CHANGE: Response is now an array instead of object